<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".restaurant.AddFoodActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/add_food_items"
        android:background="@color/purple_500"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="#FFF"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/foodName"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints="name"
        android:gravity="center"
        android:hint="@string/item_name"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/price"/>

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:hint="@string/enter_price"
        android:inputType="number"
        android:autofillHints="price" />


    <Button
        android:id="@+id/Save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:text="@string/upload_image"
        android:textAllCaps="false"
        android:textSize="24sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:backgroundTint="#EF6FB5"
        android:gravity="center"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="24sp"
        tools:ignore="TextContrastCheck" />

</LinearLayout>