<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".register.CustomerRegisterFragment">

    <EditText
        android:id="@+id/edt_FirstName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:autofillHints="firstName"
        android:background="@drawable/register_edt_background"
        android:drawableStart="@drawable/ic_name"
        android:drawablePadding="10dp"
        android:drawableTint="@color/gray"
        android:ems="10"
        android:hint="@string/edt_firstName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/gray"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edt_LastName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:autofillHints="lastName"
        android:background="@drawable/register_edt_background"
        android:drawableStart="@drawable/ic_name"
        android:drawablePadding="10dp"
        android:drawableTint="@color/gray"
        android:ems="10"
        android:hint="@string/edt_lastName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/gray"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edt_mail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:autofillHints="emailAddress"
        android:background="@drawable/register_edt_background"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="10dp"
        android:drawableTint="@color/gray"
        android:ems="10"
        android:hint="@string/edt_mail"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/gray"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edt_mobile"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:autofillHints="phone"
        android:background="@drawable/register_edt_background"
        android:drawableStart="@drawable/ic_mobile"
        android:drawablePadding="10dp"
        android:drawableTint="@color/gray"
        android:ems="10"
        android:hint="@string/edt_mobile"
        android:inputType="phone"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/gray"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edt_address"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:autofillHints="postalAddress"
        android:background="@drawable/register_edt_background"
        android:drawableStart="@drawable/ic_address"
        android:drawablePadding="10dp"
        android:drawableTint="@color/gray"
        android:ems="10"
        android:hint="@string/edt_address"
        android:inputType="textPostalAddress"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/gray"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:autofillHints="password"
        android:background="@drawable/register_edt_background"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:drawableTint="@color/gray"
        android:ems="10"
        android:hint="@string/edt_password"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/gray"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edt_conformPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:autofillHints="confirmPassword"
        android:background="@drawable/register_edt_background"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:drawableTint="@color/gray"
        android:ems="10"
        android:hint="@string/edt_confirmPassword"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/gray"
        tools:ignore="TextContrastCheck" />

</LinearLayout>